# TRV-Emu

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  todos.yml
assembly/: bin.sh  prog.s
branding/: logo.ase
include/: cpu.hpp  instruction.hpp  logging.hpp  machine.hpp  memory.hpp  printf_hook.hpp
src/: cpu.cpp  globals.cpp  instruction.cpp  machine.cpp  main.cpp  memory.cpp  render.cpp  utils.cpp
